--- a/indx.html
+++ b/indx.html
@@ -16,9 +16,9 @@
 
 
 <body>
-  <h1>האתר הכי מגניב של עלמו המלכה
+  <h1>האתר של עלמו הנדירההה</h1>
     <h2>מגניב ברמותתת</h2>
-  </h1>  
+  
 </body>
 
 
