--- a/indx.html
+++ b/indx.html
@@ -18,7 +18,10 @@
 <body dir="rtl">
   <h1>האתר של עלמו הנדירההה</h1>
     <h2>מגניב ברמותתת</h2>
-  
+  <h3>אמלה איזה אתר</h3>
+  <h4>הכי מושלם בארץ</h4>
+  <h5>אין כמוהו בעולם</h5>
+  <h6>הכי מיוחד שיש</h6>
 </body>
 
 
